--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.username=root
 jdbc.password=root
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc.mysql://localhost:3306/2002_permission
+jdbc.url=jdbc:mysql://localhost:3306/2002_permission
